# wed-folder-reminder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: reminder.yml
src/: config.py  emailer.py  main.py  scraper.py
