[project]
name = "wed-folder-reminder"
version = "0.1.0"
description = "Automated Wednesday folder volunteer reminder"
authors = [
    {name = "Yizhao"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
